unpackaged/main/default/objects/VehicleServiceNotification__c/VehicleServiceNotification__c.object-meta.xml
<CustomObject>
    <label>Vehicle Service Notification</label>
    <nameField>
        <label>VehicleServiceNotification</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicle Service Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>