unpackaged/main/default/objects/VehicleServiceNotification__c/fields/Name_of_Triage_Tab__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Triage_Tab__c</fullName>
    <label>Name of Triage Tab</label>
    <length>255</length>
    <type>Text</type>
</CustomField>