unpackaged/main/default/objects/VehicleServiceNotification__c/fields/ServiceCode__c.field-meta.xml
<CustomField>
    <fullName>ServiceCode__c</fullName>
    <label>ServiceCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>