unpackaged/main/default/objects/VehicleServiceNotification__c/fields/ServiceDescription__c.field-meta.xml
<CustomField>
    <fullName>ServiceDescription__c</fullName>
    <label>ServiceDescription</label>
    <length>255</length>
    <type>Text</type>
</CustomField>