unpackaged/main/default/objects/VehicleServiceNotification__c/fields/ServiceNotificationText__c.field-meta.xml
<CustomField>
    <fullName>ServiceNotificationText__c</fullName>
    <label>ServiceNotificationText</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>