unpackaged/main/default/objects/VehicleServiceNotification__c/fields/ServiceOrderCommentText__c.field-meta.xml
<CustomField>
    <fullName>ServiceOrderCommentText__c</fullName>
    <label>ServiceOrderCommentText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>