unpackaged/main/default/objects/VehicleServiceNotification__c/fields/VehicleMake__c.field-meta.xml
<CustomField>
    <fullName>VehicleMake__c</fullName>
    <label>VehicleMake</label>
    <length>255</length>
    <type>Text</type>
</CustomField>