unpackaged/main/default/objects/VehicleServiceNotification__c/fields/VehicleModel__c.field-meta.xml
<CustomField>
    <fullName>VehicleModel__c</fullName>
    <label>VehicleModel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>