unpackaged/main/default/objects/VehicleServiceNotification__c/fields/VehicleYear__c.field-meta.xml
<CustomField>
    <fullName>VehicleYear__c</fullName>
    <label>VehicleYear</label>
    <length>255</length>
    <type>Text</type>
</CustomField>