unpackaged/main/default/objects/VehicleServiceNotification__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>Name_of_Triage_Tab__c</columns>
    <columns>VehicleYear__c</columns>
    <columns>VehicleMake__c</columns>
    <columns>VehicleModel__c</columns>
    <columns>ServiceCode__c</columns>
    <columns>ServiceDescription__c</columns>
    <columns>ServiceNotificationText__c</columns>
    <columns>ServiceOrderCommentText__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>